# spotify-archive

./: .gitignore  .pre-commit-config.yaml  GENRES.md  LICENSE  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: lint.yml  run.yml
conf/: config.toml  config.yaml
discovered_mixtapes/: config.py  main.py
spotify_archive/: config.py  logger.py  main.py  utils.py
tests/: test_duplicates.py  test_utils.py
