[metadata]
name = discovered-mixtapes
version = 0.0.1
description = Store your discovered weekly and generated mixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fstermann/discovered-mixtapes
author = Fabian Stermann
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = discovered_mixtapes
install_requires =
    spotipy>=2.20.0
    python-dotenv>=0.20.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    discover = discovered_mixtapes.main:main
