[metadata]
name = spotify-archive
version = 0.0.1
description = Store your discovered weekly and generated mixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fstermann/spotify-archive
author = Fabian Stermann
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = spotify_archive
install_requires =
    spotipy>=2.20.0
    python-dotenv>=0.20.0
    toml>=0.10.2
python_requires = >=3.7

[options.entry_points]
console_scripts =
    spotify-archive-daily = spotify_archive.main:main_daily
    spotify-archive-weekly = spotify_archive.main:main_weekly
