[metadata]
name = spotify_archive
version = 0.0.1
description = Store your discovered weekly and generated mixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fstermann/spotify-archive
author = Fabian Stermann
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = spotify_archive
install_requires =
    python-dotenv>=0.20.0
    pyyaml>=6.0
    spotipy>=2.20.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    spotify-archive = spotify_archive.main:archive
    spotify-deduplicate = spotify_archive.main:deduplicate

[flake8]
extend-ignore = E203
max-line-length = 88

[mypy]
ignore_missing_imports = True

[isort]
force_single_line = True
